# avail-escrow-harness

./: .env.example  .gitignore  PLAN.md  design-mock.html  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vercel.json  vite.config.ts
api/: _availQuote.d.ts  _availQuote.js  quote.js
backend/: .env.example  Cargo.toml  Dockerfile  README.md
backend/src/: algo.rs  chain.rs  config.rs  error.rs  handlers.rs  kalqix.rs  main.rs  state.rs
src/: App.tsx  main.tsx
src/components/: ActivityLog.tsx  ContractsPanel.tsx  Header.tsx  IntentPanel.tsx  StatusStrip.tsx  SwapForm.tsx  TransactionsPanel.tsx
src/components/primitives/: Chip.tsx  Panel.tsx  TokenPill.tsx  TokenSelect.tsx
src/config/: avail.ts  chain.ts  kalqix.ts  networks.ts  tokens.ts
src/hooks/: useActiveNetwork.ts  useCurrentLifecycle.ts  useDeposit.ts  useErc20.ts  useIntent.ts  useKyberQuote.ts  usePermit.ts  useQuote.ts
src/lib/: format.ts
src/lib/chain/: abis.ts
src/lib/intent/: client.ts  types.ts
src/lib/kyber/: client.ts
src/lib/quote/: apiClient.ts  calc.ts  client.ts  index.ts  types.ts
src/providers/: Web3Provider.tsx
src/store/: activityLog.ts  intentTiming.ts  network.ts
src/styles/: globals.css  tokens.css
src/test-solver/: App.tsx  Header.tsx  SwapForm.tsx  SwapPanel.tsx
src/test-solver/hooks/: useSwapSession.ts
src/test-solver/lib/: client.ts  types.ts
src/test-solver/store/: session.ts
